fix calendar, overlaps, multinames

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -30,3 +30,7 @@
 #scheduler {
     width: 600px
 }
+
+.spots_remaining {
+    padding-right: 4px;
+}
