--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,7 @@ body {
 .notify{
     padding-top: 4px;
 }
+
+.spots_remaining {
+    padding-right: 4px;
+}
