--- a/css/sweetalert.css
+++ b/css/sweetalert.css
@@ -13,3 +13,7 @@
 .notify{
     margin-top: 4px;
 }
+
+.spots_remaining {
+    padding-right: 4px;
+}
